--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "next": "16.0.7",
