--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
-    "next": "16.1.0-canary.19",
+    "next": "16.1.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
